[package]
name = "nonsense-publisher-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
crossbeam-channel = "0.5.15"
fake = { version = "4", features = ["derive"] }
num_cpus = "1.17.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
dotenv = "0.15.0"
rdkafka = { version = "0.37.0", features = ["tokio"] }
config = "0.15.11"
tokio = { version = "1.45.1", features = ["full"] }
ctrlc = "3.4.7"
